Refactor swagger
